fixed contrast errors and elements errors

--- a/src/components/cartItem/cartItem.css
+++ b/src/components/cartItem/cartItem.css
@@ -40,5 +40,5 @@
 }
 
 .event-info__paragraph {
-    margin-top: auto;
+    margin-top: 2rem;
 }
